--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,10 @@ name: Release
 on:
   push:
 
+permissions:
+  id-token: write
+  contents: write
+
 jobs:
   bump-semver:
     name: Bump version number
