--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
         with:
+          semver_only: true
           initial_version: v0.0.0
           with_initial_version: true
       - uses: actions-ecosystem/action-bump-semver@v1
