--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,5 +28,7 @@ jobs:
           current_version: ${{ steps.get-latest-tag.outputs.tag }}
           level: major
       - uses: actions-ecosystem/action-push-tag@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets. PATNAME }}
         with:
           tag: ${{ steps.bump-semver.outputs.new_version }}
