--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PATNAME }}
       - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
         with:
           semver_only: true
           initial_version: v0.0.0
           with_initial_version: true
-          token: ${{ secrets.PATNAME }}
       - uses: actions-ecosystem/action-bump-semver@v1
         id: bump-semver
         with:
